Fix width button of sign in when on mobile

--- a/app/assets/stylesheets/public/home.scss
+++ b/app/assets/stylesheets/public/home.scss
@@ -7,3 +7,9 @@
     margin-left: 25px;
   }
 }
+
+@media (max-width: 991px) {
+  .signin-btn {
+    width: 100%;
+  }
+}
